@@ -13,6 +13,8 @@
  8. Enable proxy config settings page by default.
  9. Add Brazilian Portuguese translation - thanks to Wanderson Gonçalves Pereira
 10. Fix 'Locate In Library / Album' for albums with musicbrainz ID.
+11. Fix libVLC crash with invalid HTTP streams - check with QUrl that URL is
+    valid and scheme starts with http.
 
 2.3.1
 -----
